Styling changes to correlation sub table and delta-daily report

--- a/src/scss/components/_reports.scss
+++ b/src/scss/components/_reports.scss
@@ -57,17 +57,58 @@
     margin-left: 0px !important;
   }
 }
-.MuiTableBody-root {
-  .MuiTableCell-root {
+.reports-root {
+  .MuiTableBody-root tr.MuiTableRow-root.MuiTableRow-hover td.MuiTableCell-root {
+    border-right: 1px solid lightgray;
+    cursor: default;
     div {
-    //  max-height: 150px;
+      cursor: default;
+    }
+  }
+  .MuiTableBody-root tr.MuiTableRow-root.MuiTableRow-hover:not(.correlation-analysis-subtable) td.MuiTableCell-root {
+    div {
       display: block;
       -webkit-box-orient: vertical;
-      -webkit-line-clamp: 2;
-      max-width: 150px;
+      -webkit-line-clamp: 1;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
     }
+  }
+  .correlation-analysis-subtable .MuiTableBody-root tr.MuiTableRow-root.MuiTableRow-hover:not(.correlation-analysis-subtable) td.MuiTableCell-root {
+    div {
+      white-space: normal;
+    }
+  }
+  // .MuiTableRow-root.correlation-analysis-subtable {
+  //   .MuiTableCell-root.MuiTableCell-body {
+  //     padding-top: 0 !important;
+  //   }
+  //   .reports-root.analysis-correlation {
+  //     thead {
+  //       border-right: 1px solid lightgray;
+  //     }
+  //     .MuiToolbar-root {
+  //       border-right: 2px solid lightgray;
+  //     }
+  //   }
+  //     tfoot.MuiTableFooter-root .MuiTableRow-footer td.MuiTableCell-footer {
+  //       padding-right: 0px;
+  //     }
+  //   }
+  // }
+  .MuiTableBody-root {
+    .MuiTableRow-root {
+      .MuiTableCell-root {
+        div {
+          .MuiButtonBase-root {
+            padding: 3px 7px 3px 3px;
+          }
+        }
+      }
+    }
+  }
+  .isClicked {
+    white-space: normal !important;
   }
 }
